--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-senkalib = {git = 'https://github.com/ca3-caaip/senkalib.git', rev = '7d7d82d7077d886f8720b69cab50b026e87fc986' }
+senkalib = {git = 'https://github.com/ca3-caaip/senkalib.git', rev = 'f488ab01979ffd9f7245073d8148756426262cf7' }
 pandas = "^1.4.2"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.15.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
